Fix error display

--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -288,15 +288,15 @@
 			</tr>
 			<tr>
 				<td><label>38. Mô tả/đặc điểm hình thái (*)</label></td>
-				<input type="file" title="{{tooltips[56]}}" multiple accept=".docx, .doc, .pdf" ng-model="data.moTaHinhThaiFile" name ="moTaHinhThaiFile" class="input-form"></td>
+				<td><input type="file" title="{{tooltips[56]}}" multiple accept=".docx, .doc, .pdf" ng-model="data.moTaHinhThaiFile" name ="moTaHinhThaiFile" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>39. Giới tính, giống(*)</label></td>
-				<input type="text" name ="gioiTinh" title="{{tooltips[94]}}" ng-model="data.gioiTinh" class="input-form"></td>
+				<td><input type="text" name ="gioiTinh" title="{{tooltips[94]}}" ng-model="data.gioiTinh" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>40. Giai đoạn sống trong vòng đời(*)</label></td>
-				<input type="file" multiple accept=".doc, .docx, .pdf" title="{{tooltips[95]}}" name ="giaiDoanSong" ng-model="data.giaiDoanSong" class="input-form"></td>
+				<td><input type="file" multiple accept=".doc, .docx, .pdf" title="{{tooltips[95]}}" name ="giaiDoanSong" ng-model="data.giaiDoanSong" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>41. Hình vẽ:</label></td>
