--- a/app/views/users/add-vegetable-form.template.html
+++ b/app/views/users/add-vegetable-form.template.html
@@ -289,7 +289,7 @@
 			</tr>
 			<tr>
 				<td><label>38. Mô tả/đặc điểm hình thái (*)</label></td>
-				<input type="file" multiple accept=".doc, .docx, .pdf" name ="moTaHinhThaiFile" class="input-form"></td>
+				<td><input type="file" multiple accept=".doc, .docx, .pdf" name ="moTaHinhThaiFile" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>39. Hình vẽ:</label></td>
@@ -313,13 +313,13 @@
 				<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple title="{{tooltips[62]}}" name="hinhAnhNgoaiThucDia" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>43.ng tin về phim, video (*): </label></td>
+				<td><label>43. Thông tin về phim, video (*): </label></td>
 				<td>
 					<input type="text" title="{{tooltips[63]}}" name="videoStr" ng-model="data.videoStr" class="input-form" placeholder="Thông tin thêm về phim">
 				</td>
 			</tr>
 			<tr>
-				<td><label>44.eo (*):</label></td>
+				<td><label>44.Video (*):</label></td>
 				<td>
 					<input type="file" accept="video/mp4,video/x-m4v,video/*" name ="videoFile" ng-model="data.videoFile" class="input-form" required>
 				</td>
