--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -290,7 +290,7 @@
 			</tr>
 			<tr>
 				<td><label>38. Mô tả/đặc điểm hình thái (*)</label></td>
-				<input type="file" multiple accept=".doc, .docx, .pdf" name="moTaHinhThaiFile" ng-model="data.moTaHinhThaiFile" class="input-form"></td>
+				<td><input type="file" multiple accept=".doc, .docx, .pdf" name="moTaHinhThaiFile" ng-model="data.moTaHinhThaiFile" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>39. Hình vẽ:</label></td>
