--- a/app/views/users/edit/edit-paleontological-form.template.html
+++ b/app/views/users/edit/edit-paleontological-form.template.html
@@ -273,7 +273,7 @@
 				</tr>
 				<tr>
 					<td><label>38. Mô tả/đặc điểm hình thái (*)</label></td>
-					<td><input type="text" title="{{tooltips[51]}}" name="moTaHinhThai" ng-model="data.moTaHinhThai" class="input-form"></td>
+					<td><input type="text" title="{{tooltips[51]}}" name="moTaHinhThaiStr" ng-model="data.moTaHinhThaiStr" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>39. Hình vẽ:</label></td>
