--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -16,28 +16,28 @@
 			<table>
 				<h3 class="h3-title">SỐ HIỆU</h3>
 				<tr>
-					<td><label>01.Số hiệu thực địa (*):</label></td>
+					<td><label>01. Số hiệu thực địa (*):</label></td>
 					<td><input type="text"  title="{{tooltips[1]}}" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>02.Số hiệu bảo tàng cơ sở(*):</label></td>
+					<td><label>02. Số hiệu bảo tàng cơ sở(*):</label></td>
 					<td><input type="text"  title="{{tooltips[2]}}" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>03.Số hiệu BTTNVN:</label></td>
+					<td><label>03. Số hiệu BTTNVN:</label></td>
 					<td><input type="text"  title="{{tooltips[3]}}" name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>04.Mã kí hiệu mẫu vật quốc tế:</label></td>
+					<td><label>04. Mã kí hiệu mẫu vật quốc tế:</label></td>
 					<td><input type="text"  title="{{tooltips[4]}}" name="maKyHieuMauVatQuocTe" ng-model="data.maKyHieuMauVatQuocTe" class="input-form"></td>
 				</tr>
 
 				<tr>
-					<td><label>05.Các kí hiệu mẫu vật khác:</label></td>
+					<td><label>05. Các kí hiệu mẫu vật khác:</label></td>
 					<td><input type="text" title="{{tooltips[5]}}" name="kyHieuMauVatKhac" ng-model="data.kyHieuMauVatKhac" class="input-form"  required></td>
 				</tr>
 				<tr>
-					<td><label>06.Thông tin khác:</label></td>
+					<td><label>06. Thông tin khác:</label></td>
 					<td><input type="text" title="{{tooltips[6]}}" name="thongTinKhac1" ng-model="data.thongTinKhac1" class="input-form"  required></td>
 				</tr>
 			</table>
@@ -46,15 +46,15 @@
 			<table>
 				<h3 class="h3-title">TÊN MẪU VẬT</h3>
 				<tr>
-					<td><label>07.Tên Việt Nam (*):</label></td>
+					<td><label>07. Tên Việt Nam (*):</label></td>
 					<td><input type="text" title="{{tooltips[7]}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>08.Tên địa phương:</label></td>
+					<td><label>08. Tên địa phương:</label></td>
 					<td><input type="text" title="{{tooltips[8]}}" name="tenDiaPhuong" ng-model="data.tenDiaPhuong" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>09.Tên Tiếng Anh:</label></td>
+					<td><label>09. Tên Tiếng Anh:</label></td>
 					<td><input type="text" title="{{tooltips[9]}}" name="tenTiengAnh" ng-model="data.tenTiengAnh" class="input-form"></td>
 				</tr>
 				<tr>
@@ -297,13 +297,13 @@
 					<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple title="{{tooltips[55]}}" name="hinhAnhNgoaiThucDia" ng-model="data.hinhAnhNgoaiThucDia" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>43.ng tin về phim, video (*): </label></td>
+					<td><label>43. Thông tin về phim, video (*): </label></td>
 					<td>
 						<input type="text" title="{{tooltips[56]}}" name="videoStr" ng-model="data.videoStr" class="input-form" placeholder="Thông tin thêm về phim">
 					</td>
 				</tr>
 				<tr>
-					<td><label>44.eo (*):</label></td>
+					<td><label>44. Video (*):</label></td>
 					<td>
 						<input type="file" accept="video/mp4,video/x-m4v,video/*" name ="videoFile" ng-model="data.videoFile" class="input-form" required>
 					</td>
