--- a/views/display.ejs
+++ b/views/display.ejs
@@ -13,7 +13,9 @@
 				<a class="btn btn-primary" role="button" href="<%= '/app/#!/bai-dang' + objectPath %>">Đến trang quản lý mẫu</a>
 			<% } %>
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-				<% 
+				<%
+				console.log("here");
+				console.log(staticPath);
 				var sp = staticPath;
 				// do not know why we need to declare this variable.
 				// staticPath can not be accessed inside below functions
@@ -36,19 +38,42 @@
 				}
 
 				function propDiff (obj1, obj2, prop) {
-					if ((prop in obj1) && !(prop in obj2)){
-						return true;
-					}
+					try {
+						if ((prop in obj1) && !(prop in obj2)){
+							return true;
+						}
 
-					if (!(prop in obj1) && (prop in obj2)){
-						return true;
-					}
+						if (!(prop in obj1) && (prop in obj2)){
+							return true;
+						}
 
-					return diff(obj1[prop], obj2[prop]);
+						return diff(obj1[prop], obj2[prop]);
+					}
+					catch (e){
+						console.log(e);
+						console.log('+++')
+						console.log(prop);
+						console.log('+++')
+						console.log(obj1[prop]);
+						console.log('+++')
+						console.log(obj2[prop]);
+						console.log('+++')
+						return false;
+					}
 
 				}
 
 				function diff (prop1, prop2) {
+
+					// Problem here
+					if (!prop1 && !prop2){
+						return false;
+					}
+					if ((!prop1 && prop2) || (prop1 && !prop2)){
+						return true;
+					}
+					// End
+					
 					if ((prop1 instanceof Array) && (prop2 instanceof Array)){
 						if (prop1.length != prop2.length){
 							return true;
@@ -85,15 +110,26 @@
 					}
 					return (prop1 !== prop2);
 				}
-				%>
-				<% var diffs = [];
+				var diffs = [];
+				var obj1 = obj1;
+				// console.log(obj1);
+				var obj2 = obj2;
+				// console.log('doSau' in obj1);
+				// console.log('doSau' in obj2);
+				// console.log(obj2);
 					if (count == 2){
+						console.log(count);
+						// console.log(obj1);
 						for(var i in obj1){
+							console.log("processing " + i);
 							if (propDiff(obj1, obj2, i)){
+								console.log("pushing " + i);
 								diffs.push(i);
 							}
 						}
-
+						console.log("===")
+						// console.log(count);
+						console.log(obj2);
 						for(var i in obj2){
 							if (diffs.indexOf(i) < 0){
 								if (propDiff(obj1, obj2, i)){
