--- a/views/config.ejs
+++ b/views/config.ejs
@@ -47,7 +47,7 @@
 													<h4><%= users[i].fullname %></h4>
 													<h5 class="text-info">(<%= users[i].username %>)</h5>
 													<% if (users[i].lastLogin) { %>
-													<h5 class="text-info">(<%- "Last Login:<br>" + display(users[i].lastLogin) %>)</h5>
+													<h5 class="text-info">(<%- "Last Login:<br>" + users[i].lastLogin.toLocaleString() %>)</h5>
 													<% } %>
 													<input type="hidden" value="<%= i %>" name="userid" />
 												</div>
