--- a/views/config.ejs
+++ b/views/config.ejs
@@ -2,18 +2,23 @@
 <html>
 	<head>
 		<title>Config</title>
+		<style>
+		.btn{
+			margin-top: 10px;
+		}
+		</style>
 	<% include header %>
 	</head>
 	
 	<body>
-		<div class="container-fluid">
+		<div class="container">
 			<div class="row">
-				<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<% include nav %>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-12 col-sm-10 col-md-6 col-lg-4 col-lg-offset-4 col-md-offset-3">
+				<div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
 					<div class="panel panel-primary">
 						<div class="panel-heading">
 							<h3 class="panel-title">Users</h3>
@@ -67,11 +72,93 @@
 											</div>
 										</form>
 									</li>
-								 <% } %>
-							 </ul>
+								<% } %>
+							</ul>
 						</div>
 					</div>
 				</div>
+				<div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
+			<div class="panel-group" id="accordion">
+				<div class="panel panel-primary panel-shadow">
+					<div class="panel-heading">
+						<h4 class="panel-title">
+							<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Thêm cấp</a>
+						</h4>
+					</div>
+					<div id="collapse1" class="panel-collapse collapse">
+						<div class="panel-body">
+							<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+								<input type="text" name="rolename" id="rolename" placeholder="Tên" class="form-control" />
+							</div>
+							<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+								<span>Quản lý</span>
+							</div>
+							<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block">
+								<select name="select-new-role" id="select-new-role" class="form-control">
+									<% for(var i in cores.resources) { %>
+										<option value="<%= i %>"><%= cores.resources[i].resourceName %></option>
+									<% } %>
+								</select>
+							</div>
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="margin-top: 10px">
+								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+									<ul class="list-group">
+											<li class="list-group-item">
+												<input name="view" type="checkbox"> 
+												<span> Xem </span>
+											</li>
+										
+											<li class="list-group-item">
+												<input name="create" type="checkbox"> 
+												<span> Thêm </span>
+											</li>
+										
+									</ul>
+								</div>
+								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+									<ul class="list-group">
+											<li class="list-group-item">
+												<input name="edit" type="checkbox"> 
+												<span> Sửa </span>
+											</li>
+										
+											<li class="list-group-item">
+												<input name="delete" type="checkbox"> 
+												<span> Xóa </span>
+											</li>
+										
+									</ul>
+								</div>
+							</div>
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+								<button class="btn btn-success btn-block" onclick="addRole()">Thêm</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="panel panel-danger panel-shadow-danger">
+					<div class="panel-heading">
+						<h4 class="panel-title">
+							<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Xóa cấp</a>
+						</h4>
+					</div>
+					<div id="collapse2" class="panel-collapse collapse">
+						<div class="panel-body">
+							<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+								<select id="select-delete-role" class="form-control">
+									<% for(var j = 0; j < roles.length; j++) { %>
+										<option value="<%= roles[j].role %>"><%= roles[j].rolename %></option>
+									<% } %>
+								</select>
+							</div>
+							<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+								<button class="btn btn-danger" onclick="deleteRole()">Xóa</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 			</div>
 		</div>
 		<script>
