--- a/views/config.ejs
+++ b/views/config.ejs
@@ -85,54 +85,56 @@
 							<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Thêm cấp</a>
 						</h4>
 					</div>
-					<div id="collapse1" class="panel-collapse collapse">
+					<div id="collapse1" class="panel-collapse collapse in">
 						<div class="panel-body">
-							<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-								<input type="text" name="rolename" id="rolename" placeholder="Tên" class="form-control" />
-							</div>
-							<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-								<span>Quản lý</span>
-							</div>
-							<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block">
-								<select name="select-new-role" id="select-new-role" class="form-control">
-									<% for(var i in cores.resources) { %>
-										<option value="<%= i %>"><%= cores.resources[i].resourceName %></option>
-									<% } %>
-								</select>
-							</div>
-							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="margin-top: 10px">
+							<form action="/config/roles" method="post" id="form-add-role">
 								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-									<ul class="list-group">
-											<li class="list-group-item">
-												<input name="view" type="checkbox"> 
-												<span> Xem </span>
-											</li>
-										
-											<li class="list-group-item">
-												<input name="create" type="checkbox"> 
-												<span> Thêm </span>
-											</li>
-										
-									</ul>
+									<input type="text" name="rolename" id="rolename" placeholder="Tên" class="form-control" />
 								</div>
-								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-									<ul class="list-group">
-											<li class="list-group-item">
-												<input name="edit" type="checkbox"> 
-												<span> Sửa </span>
-											</li>
-										
-											<li class="list-group-item">
-												<input name="delete" type="checkbox"> 
-												<span> Xóa </span>
-											</li>
-										
-									</ul>
+								<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+									<span>Quản lý mẫu</span>
 								</div>
-							</div>
-							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-								<button class="btn btn-success btn-block" onclick="addRole()">Thêm</button>
-							</div>
+								<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block">
+									<select name="side" id="select-new-role" class="form-control">
+										<% for(var i in cores.resources) { %>
+											<option value="<%= i %>"><%= cores.resources[i].resourceName %></option>
+										<% } %>
+									</select>
+								</div>
+								<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="margin-top: 10px">
+									<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+										<ul class="list-group">
+												<li class="list-group-item">
+													<input name="view" type="checkbox"> 
+													<span> Xem </span>
+												</li>
+											
+												<li class="list-group-item">
+													<input name="create" type="checkbox"> 
+													<span> Thêm </span>
+												</li>
+											
+										</ul>
+									</div>
+									<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+										<ul class="list-group">
+												<li class="list-group-item">
+													<input name="edit" type="checkbox"> 
+													<span> Sửa </span>
+												</li>
+											
+												<li class="list-group-item">
+													<input name="delete" type="checkbox"> 
+													<span> Xóa </span>
+												</li>
+											
+										</ul>
+									</div>
+								</div>
+								<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+									<a class="btn btn-success btn-block" onclick="addRole()">Thêm</a>
+								</div>
+							</form>
 						</div>
 					</div>
 				</div>
@@ -144,16 +146,20 @@
 					</div>
 					<div id="collapse2" class="panel-collapse collapse">
 						<div class="panel-body">
-							<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-								<select id="select-delete-role" class="form-control">
-									<% for(var j = 0; j < roles.length; j++) { %>
-										<option value="<%= roles[j].role %>"><%= roles[j].rolename %></option>
-									<% } %>
-								</select>
-							</div>
-							<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-								<button class="btn btn-danger" onclick="deleteRole()">Xóa</button>
-							</div>
+							<form id="form-delete-role" action="/config/roles/delete" method="post">
+								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+										<select id="select-delete-role" name="deleteRole" class="form-control">
+											<% for(var j = 0; j < roles.length; j++) {
+												if (roles[j].role != 'admin') { %>
+													<option value="<%= roles[j].role %>"><%= roles[j].rolename %></option>
+												<% }
+											} %>
+										</select>
+								</div>
+								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+									<a class="btn btn-danger" onclick="deleteRole()">Xóa</a>
+								</div>
+							</form>
 						</div>
 					</div>
 				</div>
@@ -173,6 +179,77 @@
 				console.log(ob(id));
 				$.ajax({
 					url: '/config',
+					method: 'post',
+					contentType: false,
+					processData: false,
+					dataType: 'json',
+					data: fd,
+					success: function (data) {
+						console.log(data);
+						if (data.status.localeCompare('success') == 0){
+							alert('Cập nhật thành công. Trang sẽ tự reload sau 1s.');
+						}
+						setTimeout(function () {
+							window.location.reload(true);
+						}, 1000);
+					},
+					error: function (err) {
+						console.log(err);
+						try {
+							alert(err.responseJSON.error);
+						}
+						finally {
+							setTimeout(function () {
+								window.location.reload(true);
+							}, 1000);
+						}
+					}
+				})
+			}
+
+			function addRole () {
+				var rolename = ob('rolename').value.trim();
+				if (rolename.length < 1){
+					return alert('Nhập tên');
+				}
+				var fd = new FormData(document.getElementById('form-add-role'));
+				console.log(fd);
+				console.log(ob('form-add-role'));
+				$.ajax({
+					url: '/config/roles',
+					method: 'post',
+					contentType: false,
+					processData: false,
+					dataType: 'json',
+					data: fd,
+					success: function (data) {
+						console.log(data);
+						if (data.status.localeCompare('success') == 0){
+							alert('Cập nhật thành công. Trang sẽ tự reload sau 1s.');
+						}
+						setTimeout(function () {
+							window.location.reload(true);
+						}, 1000);
+					},
+					error: function (err) {
+						console.log(err);
+						try {
+							alert(err.responseJSON.error);
+						}
+						finally {
+							setTimeout(function () {
+								window.location.reload(true);
+							}, 1000);
+						}
+					}
+				})
+			}
+
+			function deleteRole () {
+				
+				var fd = new FormData(document.getElementById('form-delete-role'));
+				$.ajax({
+					url: '/config/roles/delete',
 					method: 'post',
 					contentType: false,
 					processData: false,
