--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,58 +5,49 @@
 		<% include header %>
 	</head>
 	<body>
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 col-lg-offset-3 col-md-offset-2">
-					<% include nav %>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 col-lg-offset-3 col-md-offset-2">
-					
-					<div class="container-fluid">
-						<form class="form" name="form" method="post" onsubmit="handleRegister()">
-							<div class="row" >
-								<label>Họ tên</label><input name="fullname" id="fullname" class="form-control" required="">
-							</div>
-							<div class="row" >
-								<label>Email</label><input type="email" name="email" id="email" class="form-control" required="">
-							</div>
-							<div class="row">
-								<label>Mật khẩu</label><input type="password" name="password" id="password" class="form-control">
-							</div>
-							<div class="row">
-								<button class="btn btn-inverse btn-lg btn-login" style="margin-top:10px" type="submit" id="btnSubmit">Đăng ký</button>
-							</div>
-							<hr>
-							<% if (message) { %>
-								<div class="col-sm-12">
-									<span class="text-danger"><%= message %></span>
-								</div>
-							<% } %>
-							<script type="text/javascript">
-								function ob (x) {
-									return document.getElementById(x);
-								}
-
-								ob('fullname').focus();
-								
-								function handleRegister () {
-									var plainPass = ob('password').value;
-									var i = 0;
-									while (i < 1000){
-										plainPass = CryptoJS.MD5(plainPass).toString();
-										i++;
-									}
-									ob('password').value = plainPass;
-									// $('#btnSubmit').click();
-								}
-							</script>
-						</form>
+		<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
+			<div class="modal-dialog">
+				<div class="loginmodal-container">
+					<h1>Đăng ký</h1>
+					<br>
+					<form method="post" onsubmit="handleRegister()">
+						<input type="text" name="fullname" id="fullname" placeholder="Họ tên">
+						<input type="text" name="email" id="email" placeholder="Username">
+						<input type="password" name="password" id="password" placeholder="Password">
+						<% if (message) { %>
+							<span class="text-danger"><%= message %></span>
+						<% } %>
+						<input type="submit" name="login" id="btnSubmit" class="login loginmodal-submit" value="Đăng ký">
+					</form>
+					<div class="login-help">
+						<a href="/auth/login">Đăng nhập</a>
 					</div>
-					<hr>
 				</div>
+				
 			</div>
 		</div>
+		<script type="text/javascript">
+			$('#login-modal').modal({
+				backdrop: 'static',
+				keyboard: false
+			});
+			$('#login-modal').modal('show');
+			function ob (x) {
+				return document.getElementById(x);
+			}
+
+			ob('fullname').focus();
+			
+			function handleRegister () {
+				var plainPass = ob('password').value;
+				var i = 0;
+				while (i < 1000){
+					plainPass = CryptoJS.MD5(plainPass).toString();
+					i++;
+				}
+				ob('password').value = plainPass;
+				// $('#btnSubmit').click();
+			}
+		</script>
 	</body>
 </html>
