--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/stylesheets/bootstrap.min.css"> <!-- load bootstrap css -->
 <link rel="stylesheet" href="/stylesheets/style.css">
+<link rel="stylesheet" type="text/css" href="/app/asset/css/main.css">
 <script src="/javascripts/jquery.js"></script>
 <script src="/javascripts/bootstrap.min.js"></script>
 <script src="/javascripts/react.min.js"></script>
