--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="container-fluid">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
@@ -8,7 +8,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/">Museum</a>
+			<a class="navbar-brand" href="/">Trang chủ</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -60,3 +60,4 @@
 		</div><!-- /.navbar-collapse -->
 	</div>
 </nav>
+
